--- a/micro-service-config/service-discovery.yml
+++ b/micro-service-config/service-discovery.yml
@@ -13,3 +13,8 @@ eureka:
   serviceUrl:
     defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
 
+spring:
+  cloud:
+    config:
+      enabled: true
+
