--- a/micro-service-config/web-application-backup.yml
+++ b/micro-service-config/web-application-backup.yml
@@ -5,6 +5,11 @@ spring:
   application:
     name: hello-service-backup
 
+spring:
+  cloud:
+    config:
+      enabled: true
+
 eureka:
   client:
     serviceUrl:
