Remove config enabled option.
* As it will filter out application name.

* And makes bootstrop application name missing in env.

Signed-off-by: Pan Li <incarnation.p.lee@outlook.com>

--- a/micro-service-config/hystrix-dashboard.yml
+++ b/micro-service-config/hystrix-dashboard.yml
@@ -1,15 +1,14 @@
 server:
   port: 8004
 
+spring:
+  application:
+    name: hystrix-dashboard
+
 eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:9999/eureka/
-
-spring:
-  cloud:
-    config:
-      enabled: true
 
 turbine:
   app-config: ribbon-consumer
