--- a/micro-service-config/feign-consumer.yml
+++ b/micro-service-config/feign-consumer.yml
@@ -2,9 +2,8 @@ server:
   port: 8005
 
 spring:
-  cloud:
-    config:
-      enabled: true
+  application:
+    name: feign-consumer
 
 eureka:
   client:
