--- a/micro-service-config/web-application-backup.yml
+++ b/micro-service-config/web-application-backup.yml
@@ -2,9 +2,8 @@ server:
   port: 8002
 
 spring:
-  cloud:
-    config:
-      enabled: true
+  application:
+    name: hello-service-backup
 
 eureka:
   client:
