--- a/micro-service-config/web-application.yml
+++ b/micro-service-config/web-application.yml
@@ -2,9 +2,8 @@ server:
   port: 8001
 
 spring:
-  cloud:
-    config:
-      enabled: true
+  application:
+    name: hello-service
 
 eureka:
   client:
