--- a/micro-service-config/feign-consumer.yml
+++ b/micro-service-config/feign-consumer.yml
@@ -1,15 +1,6 @@
 server:
   port: 8005
 
-spring:
-  application:
-    name: feign-consumer
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:9999/eureka/
-
 feign:
   hystrix:
     enabled: true
@@ -22,7 +13,7 @@ hystrix:
             thread:
               timeoutInMilliseconds: 4000
 
-HELLO-SERVICE: # name from @FeignClient
+WEB-APPLICATION: # name from @FeignClient
   ribbon:
 #    ConnectTimeout: 500
     ReadTimeout: 1000
