Update provider for testing.
Signed-off-by: Pan Li <panli@microsoft.com>

--- a/micro-service-config/ribbon-consumer.yml
+++ b/micro-service-config/ribbon-consumer.yml
@@ -1,13 +1,6 @@
 server:
   port: 8003
 
-management:
-  endpoints:
-    web:
-      exposure:
-        include:
-          - hystrix.stream
-
 provider:
-  name: ribbon
+  name: panli
 
