--- a/bad-properties.yml
+++ b/bad-properties.yml
@@ -14,3 +14,9 @@ spring:
           searchPaths: micro-service-config
           username:
           password:
+          
+management:
+  endpoints:
+    web:
+      exposure:
+        include: *
