--- a/gateway.yml
+++ b/gateway.yml
@@ -10,7 +10,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: *
+        include: "*"
 
 provider:
   name: panli-test-interval-0
